Add support updateAt for repository
