# server/src/main/kotlin/com/takaotech/dashboard/route/github/repository/DepositoryRepository.kt
@@ -70,6 +70,7 @@ class DepositoryRepository(
 
 					license = repo.license
 					licenseUrl = repo.licenseUrl
+					updatedAt = repo.updatedAt
 
 				}
 			}
